2007-12-24  Akim Demaille  <demaille@gostai.com>

	merge -r 2153:2174 https://svn.gostai.com/svn/kernel1/trunk
	2007-12-24  Akim Demaille  <demaille@gostai.com>
	Don't depend on output-to-dot.
	* src/parser/parser.mk: here, since we don't use it.

	2007-12-21  Matthieu Nottale  <nottale@gostai.com>
	Declare vars in generated code.
	* src/ucommand.cc: Here when writting the result of a remote
	  function call.

	2007-12-21  Matthieu Nottale  <nottale@gostai.com>
	loadFile uses std::cin if /dev/stdin is passed.
	* src/userver.cc: Here.

	2007-12-21  Akim Demaille  <demaille@gostai.com>
	Backport SC_UCONSOLE mode.
	* src/parser/utoken.l: From k2.

	2007-12-21  mefyl  <mefyl@lrde.epita.fr>
	Document.
	* include/kernel/userver.hh: Document and reorder time members.

	2007-12-21  Akim Demaille  <demaille@gostai.com>
	No color for the buildfarm.
	* Makefile.am (CHECK_BUILDFARM_FLAGS): New.
	Use it.

	2007-12-21  Matthieu Nottale  <nottale@gostai.com>
	Fix bug from var-lookup.chk.
	* src/ucommand.cc: Check if a variable is inherited && do not display
	  the "undeclared variable" warning.

	2007-12-21  Akim Demaille  <demaille@gostai.com>
	make check-buildfarm.
	* Makefile.am (check-buildfarm): New.

	2007-12-21  Akim Demaille  <demaille@gostai.com>
	Update tests.
	* tests-local.mk (TESTS_DIRS): Define it.

2007-12-21  Akim Demaille  <demaille@gostai.com>

	Formatting changes in the handling of SC_UCONSOLE.
	* src/parser/utoken.l: Here, to be like k1.

2007-12-21  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Move some code from configure.ac to test-local.mk.
	* configure.ac (ENABLE_HARD_ERRORS): Move to...
	* tests-local.mk: ... Here.

2007-12-21  Loic Fosse  <fosse@gostai.com>

	Add comments for translation of loopn.
	* src/parser/ugrammar.y: Here.

2007-12-21  Loic Fosse  <fosse@gostai.com>

	Fix error message about wrong flavor for at keyword.
	* src/parser/ugrammar.y: Here.

2007-12-21  Loic Fosse  <fosse@gostai.com>

	Use ast::While for loopn.